--- a/css/style.css
+++ b/css/style.css
@@ -814,6 +814,13 @@ select {
   padding-right: 16px;
 }
 .footer__copyright {
+  background: -webkit-linear-gradient(45deg, #FFAA00, #FF1C00);
+  background: -moz-linear-gradient(45deg, #FFAA00, #FF1C00);
+  background: -o-linear-gradient(45deg, #FFAA00, #FF1C00);
+  background: linear-gradient(45deg, #FFAA00, #FF1C00);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-size: 1rem;
   letter-spacing: 0.02em;
 }
